# stm32h7-gfx

./: .gitignore
firmware/stm32h7-gfx-fw/: CMakeLists.txt
firmware/stm32h7-gfx-fw/src/ap/: ap.cpp
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/: stm32h7-gfx.touchgfx
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/assets/texts/: texts.xml
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/config/gcc/: app.mk
firmware/stm32h7-gfx-fw/src/ap/touch-gfx/config/msvs/: Application.props
firmware/stm32h7-gfx-fw/src/bsp/ldscript/: STM32H723ZGTX_FLASH.ld
firmware/stm32h7-gfx-fw/src/bsp/rtos/: cpu_utils.c
firmware/stm32h7-gfx-fw/src/hw/: hw_def.h
firmware/stm32h7-gfx-fw/src/hw/driver/touchgfx/: OSWrappers.cpp  STM32H7TouchController.cpp  touchgfx.cpp  touchgfx.h
